Revert "Java 11 への移行"
This reverts commit de88fd0a5e7d77ef29f2a9e2ba0aebd7767a1958.